<resources>
    <string name="app_name">Task Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Task Master</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Task Management</string>
    <string name="menu_slideshow">Reports</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_todo">To Do Feature</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_About">About App</string>
    <string name="menu_share">Share App</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_temp">temp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="report_navigation1">Overdue</string>
    <string name="report_navigation2">Pending</string>
    <string name="report_navigation3">Completed</string>
    <string name="report_navigation4">Waiting</string>

    <!--    Add task-->
    <string name="tittle">Tittle of Task</string>
    <string name="description">Description</string>
    <string name="Loading">Loading...</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="about_app">This is application is beneficial using in organisations giving tasks by the manager or team leader of the organisation. This is why it is denominated as Task Master by our team. \n\nThis is used to provide task to several subordinates and clients working in the organisation or anywhere else (Work From Home) by the manager or Team Leader. This helps you in a way that you don\'t need to go to the subordinates and clients or call them to provide them new tasks. \n\nIt is done only by just a click and sub-ordinate can submit it once it is done. This is how we can stop holding trivial meetings (means calling clients and providing tasks) providing them task only through Task Master. This application save your time..</string>
    <string name="dedicated">This application is dedicated to Mr. Kunwar Anupam Singh (IPS). We are proudly thankful to him</string>
    <string name="app_quote">\u0022Time flies fast, but it\'s good that you are the pilot.\u0022</string>

    <string-array name="priority_select">
        <item>Normal</item>
        <item>High</item>
    </string-array>

<!--    adds-->
    <string name="banner_ad_unit_id">ca-app-pub-6440522252929649/5013968044</string>
    <string name="interestitial_ad_unit_id">ca-app-pub-6440522252929649/1783501172</string>

    <string name="internet_error">Internet connection is not available\nor Unstable</string>
    <string name="internet_error_toast">Internet is not available</string>

<!--    //Home Name No internet-->
    <string name="internet_error_name">No Internet</string>

</resources>