<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/task_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/report"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notification"/>
    </group>
    <item android:title="To Do">
        <menu>
                <item
                    android:id="@+id/nav_todo"
                    android:icon="@drawable/ic_todo"
                    android:title="@string/menu_todo"/>
        </menu>
    </item>
    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/menu_profile"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_About"/>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/menu_share"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout"/>
            </group>
        </menu>
    </item>
</menu>